--- a/app.conf
+++ b/app.conf
@@ -11,7 +11,7 @@
 ##############################################################################
 
 handlers:
-  - url : /
+  - url : /.*
     script: index.php
 
   - expire : .jpg modify 10 years
@@ -20,3 +20,6 @@ handlers:
   - expire : .gif modify 10 years
   - expire : .JPG modify 10 years
   - expire : .ico modify 10 years
+
+environment :
+  DEPLOY_MODE : "PRD"
